Changed payers to use LinkedHashMap for ordering, fixed Java11 issue